# claim-graph

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  SUMMARY.md  demo_workflow.py  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/api/: __init__.py  analyze.py  generate_claim.py  ingest.py
app/database/: __init__.py  crud.py  db.py
app/graph/: __init__.py  graph.py  nodes.py  supervisor.py
app/models/: __init__.py  fhir_models.py  graph_state.py
app/utils/: __init__.py  llm_mock.py  synthetic_data.py
tests/: __init__.py  conftest.py  test_api.py  test_router.py  test_schemas.py
